--- a/dev.html
+++ b/dev.html
@@ -71,7 +71,7 @@ animation: AnimationName 30s ease infinite;
                 <h2 style="font-size: 40px;margin:0px;">Source Control, A Life Saving Tool</h2>
                 <p>As i progress further in my development, things started to get much more complex. During this time i
                     needed something to manage, organize, and keep track of my syntax. By using GIT i am able to keep
-                    track of each revision and to also experiment implementing(or whether to discard) a POC.</p>
+                    track of each revision and to also experiment implementing(or whether to discard) a POC(Proof of Concept).</p>
             </article>
             <article>
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 2</h1>
