--- a/sco.html
+++ b/sco.html
@@ -53,7 +53,8 @@ animation: AnimationName 30s ease infinite;
             Strategy & Concept
         </div>
         <section class="content">
-            <h2 style="font-size: 40px;margin:0px;">Strategy</h2>
+            <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 0</h1>
+            <!-- <h2 style="font-size: 40px;margin:0px;">Strategy</h2> -->
             <article id="TargetAudience">
                 <h2 style="font-size: 40px;margin:0px;">Target Audience</h4>
                     <p>Nullam consequat erat sed velit porta, sed iaculis velit lacinia. Nam placerat scelerisque odio,
@@ -71,7 +72,7 @@ animation: AnimationName 30s ease infinite;
                     <p>[place holder for target audience assignment]</p>
             </article>
 
-            <h2 style="font-size: 40px;margin:0px;">Concept</h2>
+            <!-- <h2 style="font-size: 40px;margin:0px;">Concept</h2> -->
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Visual Association</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a nisi non lectus rutrum
@@ -88,6 +89,57 @@ animation: AnimationName 30s ease infinite;
                     felis.
                     Pellentesque auctor tellus congue ornare fermentum.</p>
                 <p>[Placeholder for flipbook]</p>
+            </article>
+
+            <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 1</h1>
+            <article>
+                <h2 style="font-size: 40px;margin:0px;">Brand Value</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a nisi non lectus rutrum
+                    facilisis a
+                    sit amet velit. Nullam placerat elit non ullamcorper pulvinar. Aliquam erat volutpat.
+                    Integer id
+                    elit blandit lectus dignissim molestie. Curabitur sit amet quam quam. Fusce imperdiet, arcu
+                    sed
+                    volutpat facilisis, arcu diam tincidunt justo, nec viverra nisi elit eget purus. Morbi
+                    pellentesque
+                    dui id purus eleifend tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et
+                    ultrices
+                    posuere cubilia Curae; Curabitur augue nisi, suscipit at magna quis, dapibus fringilla
+                    felis.
+                    Pellentesque auctor tellus congue ornare fermentum.</p>
+            </article>
+            <article>
+                <h2 style="font-size: 40px;margin:0px;">Color</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a nisi non lectus rutrum
+                    facilisis a
+                    sit amet velit. Nullam placerat elit non ullamcorper pulvinar. Aliquam erat volutpat.
+                    Integer id
+                    elit blandit lectus dignissim molestie. Curabitur sit amet quam quam. Fusce imperdiet, arcu
+                    sed
+                    volutpat facilisis, arcu diam tincidunt justo, nec viverra nisi elit eget purus. Morbi
+                    pellentesque
+                    dui id purus eleifend tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et
+                    ultrices
+                    posuere cubilia Curae; Curabitur augue nisi, suscipit at magna quis, dapibus fringilla
+                    felis.
+                    Pellentesque auctor tellus congue ornare fermentum.</p>
+            </article>
+            <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 2</h1>
+            <article>
+                <h2 style="font-size: 40px;margin:0px;">Magazine Layout</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a nisi non lectus rutrum
+                    facilisis a
+                    sit amet velit. Nullam placerat elit non ullamcorper pulvinar. Aliquam erat volutpat.
+                    Integer id
+                    elit blandit lectus dignissim molestie. Curabitur sit amet quam quam. Fusce imperdiet, arcu
+                    sed
+                    volutpat facilisis, arcu diam tincidunt justo, nec viverra nisi elit eget purus. Morbi
+                    pellentesque
+                    dui id purus eleifend tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et
+                    ultrices
+                    posuere cubilia Curae; Curabitur augue nisi, suscipit at magna quis, dapibus fringilla
+                    felis.
+                    Pellentesque auctor tellus congue ornare fermentum.</p>
             </article>
         </section>
     </div>
