--- a/ux.html
+++ b/ux.html
@@ -55,29 +55,39 @@ animation: AnimationName 30s ease infinite;
         </div>
 
         <section class="content">
-            <article>
+
+            <section id="prologue" style="padding:5vw;">
                 <h2 style="font-style: italic;font-size: 40px;margin:0px;">Essentials of User-Centered Design</h2>
-                <h2 style="font-size: 40px;margin:0px;">Empathize</h2>
-                <p>The first step is to empathize with in the target group. It is of great importance since otherwise my
-                    own assumptions can be subjective and could compromise the design process. In this process it is
-                    necessary to research the current target audience and to immerse myself with the end user.</p>
-                <h2 style="font-size: 40px;margin:0px;">Define</h2>
-                <p>This step is important for determining the "problem". What needs to be done is defined in this
-                    phase. This is based on the user needs from empathizing with end user.</p>
-                <h2 style="font-size: 40px;margin:0px;">Ideate</h2>
-                <p>From the information gathered from the previous steps, we can start generating ideas. To brainstorm
-                    and to start devising creative solutions to solve the problem. By the end of this step, a concept
-                    should have been devised.</p>
-                <h2 style="font-size: 40px;margin:0px;">Prototype</h2>
-                <p>Based from the concept, a prototype can start to be developed. A prototype does not necessarily have
-                    to represent the end product and is used to determine whether if the solution(s) will work well or
-                    not for the problem.</p>
-                <h2 style="font-size: 40px;margin:0px;">Test</h2>
-                <p>After developing the prototype and determining the specific target audience. A test can be commenced
-                    to determine the efficacy of the prototype. If the outcome result does not satisfy, we can go back
-                    to the previous phases and to iterate until eventually the result gets closer to the desired
-                    outcome.</p>
-            </article>
+                <article>
+                    <h2 style="font-size: 40px;margin:0px;">Empathize</h2>
+                    <p>The first step is to empathize with in the target group. It is of great importance since
+                        otherwise my
+                        own assumptions can be subjective and could compromise the design process. In this process it is
+                        necessary to research the current target audience and to immerse myself with the end user.</p>
+                    <h2 style="font-size: 40px;margin:0px;">Define</h2>
+                    <p>This step is important for determining the "problem". What needs to be done is defined in this
+                        phase. This is based on the user needs from empathizing with end user.</p>
+                    <h2 style="font-size: 40px;margin:0px;">Ideate</h2>
+                    <p>From the information gathered from the previous steps, we can start generating ideas. To
+                        brainstorm
+                        and to start devising creative solutions to solve the problem. By the end of this step, a
+                        concept
+                        should have been devised.</p>
+                    <h2 style="font-size: 40px;margin:0px;">Prototype</h2>
+                    <p>Based from the concept, a prototype can start to be developed. A prototype does not necessarily
+                        have
+                        to represent the end product and is used to determine whether if the solution(s) will work well
+                        or
+                        not for the problem.</p>
+                    <h2 style="font-size: 40px;margin:0px;">Test</h2>
+                    <p>After developing the prototype and determining the specific target audience. A test can be
+                        commenced
+                        to determine the efficacy of the prototype. If the outcome result does not satisfy, we can go
+                        back
+                        to the previous phases and to iterate until eventually the result gets closer to the desired
+                        outcome.</p>
+                </article>
+            </section>
             <article>
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 0</h1>
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Research</h1>
@@ -89,7 +99,8 @@ animation: AnimationName 30s ease infinite;
                 </p>
                 <h2 style="font-size: 40px;margin:0px;">Interview Result</h2>
                 <p>Conclusions of the interview reveals:
-                    Our client’s target group is mainly constituted out of women in the ages between 14–19 years old.</p>
+                    Our client’s target group is mainly constituted out of women in the ages between 14–19 years old.
+                </p>
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Prototyping</h1>
                 <h2 style="font-size: 40px;margin:0px;">Storyboard</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt risus a consequat porta.
