--- a/ux.html
+++ b/ux.html
@@ -56,7 +56,7 @@ animation: AnimationName 30s ease infinite;
 
         <section class="content">
 
-            <section id="prologue" style="padding:5vw;">
+            <section id="prologue" style="padding:0px;background:rgba(0,0,0,0.75);color: white; padding: 30px 30px 30px; margin-top: 20px;">
                 <h2 style="font-style: italic;font-size: 40px;margin:0px;">Essentials of User-Centered Design</h2>
                 <article>
                     <h2 style="font-size: 40px;margin:0px;">Empathize</h2>
