very minor detail change

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ animation: AnimationName 12s ease infinite;">
             <h1
                 style="margin-bottom: 0px; font-size: 72px; font-weight: bold;
     font-style: italic; color: rgb(255, 255, 255); font-style: italic; font-weight: bold; color: rgba(255, 255, 255, 1);">
-                Welcome.</h1>
+                Welcome</h1>
             <p style="margin-top: 0px;">This site is in development. Your consideration is advised.</p><a
                 href="interactiveVisual.html" style="color: white;">Link to the interactive
             visual.</a>
