sco content update

--- a/sco.html
+++ b/sco.html
@@ -57,38 +57,22 @@ animation: AnimationName 30s ease infinite;
             <!-- <h2 style="font-size: 40px;margin:0px;">Strategy</h2> -->
             <article id="TargetAudience">
                 <h2 style="font-size: 40px;margin:0px;">Target Audience</h4>
-                    <p>Nullam consequat erat sed velit porta, sed iaculis velit lacinia. Nam placerat scelerisque odio,
-                        a
-                        mattis
-                        lectus sodales quis. Praesent tincidunt quam quis lorem viverra rutrum. Vivamus in iaculis
-                        risus.
-                        Nunc
-                        sodales augue id elit laoreet, vel ultricies nisi varius. Nunc purus nulla, dignissim vel
-                        pretium
-                        nec,
-                        consectetur posuere turpis. Nam leo felis, vestibulum sed vestibulum sit amet, eleifend et sem.
-                        Proin
-                        bibendum eros vel est iaculis faucibus.</p>
-                    <p>[place holder for target audience assignment]</p>
+                    <p>When it comes to branding a musician, it's imperative to know who the 'target audience' is, and
+                        how to reach them. In order to get the general idea of the target audience, 'personas' can be
+                        used to visualize the target audience. </p><p>In this assignment i have made a few personas(in
+                        chronological order) of one of my groupmates, my personal favorite artist, and the target
+                        audience of the client.</p>
+                    <a href="content/SCO_target_audience_1.jpg">Target audience exercise 1</a>
+                    <a href="" style="color: grey;">Target audience exercise 2</a>
+                    <a href="" style="color: grey;">Target audience exercise 3</a>
             </article>
 
             <!-- <h2 style="font-size: 40px;margin:0px;">Concept</h2> -->
             <article>
-                <h2 style="font-size: 40px;margin:0px;">Visual Association</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a nisi non lectus rutrum
-                    facilisis a
-                    sit amet velit. Nullam placerat elit non ullamcorper pulvinar. Aliquam erat volutpat.
-                    Integer id
-                    elit blandit lectus dignissim molestie. Curabitur sit amet quam quam. Fusce imperdiet, arcu
-                    sed
-                    volutpat facilisis, arcu diam tincidunt justo, nec viverra nisi elit eget purus. Morbi
-                    pellentesque
-                    dui id purus eleifend tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et
-                    ultrices
-                    posuere cubilia Curae; Curabitur augue nisi, suscipit at magna quis, dapibus fringilla
-                    felis.
-                    Pellentesque auctor tellus congue ornare fermentum.</p>
-                <p>[Placeholder for flipbook]</p>
+                <h2 style="font-size: 40px;margin:0px;">Visual Semiotics</h2>
+                <p>Visual semiotics is a sub-domain of semiotics that analyses the way visual images communicate a
+                    message.</p><p>In this assigment i had to search for two different images and to visually associate in terms of shape, content, structure, and composition.</p>
+                <a href="content/visual_semiotics.pdf">Visual semiotics PDF</a>
             </article>
 
             <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 1</h1>
@@ -124,7 +108,7 @@ animation: AnimationName 30s ease infinite;
                     felis.
                     Pellentesque auctor tellus congue ornare fermentum.</p>
             </article>
-            <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 2</h1>
+            <!-- <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 2</h1> -->
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Magazine Layout</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a nisi non lectus rutrum
@@ -147,8 +131,8 @@ animation: AnimationName 30s ease infinite;
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
         <a href="dev.html">Development</a>
-        <a href="ux.html">UX</a>
         <a href="sco.html">Strategy & Concept</a>
+        <a href="ux.html">UX</a>
         <a href="#" style="color:rgb(214, 214, 214);">Project</a>
     </div>
 
