content section layout overhaul simplified

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ animation: AnimationName 12s ease infinite;">
             <div class="headerplaceholder"></div>
         </header>
 
-        <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
+        <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <!-- Content -->
         <section class="content" style="margin-top: 8vw; position: fixed;background: none;color: white;">
@@ -50,8 +50,8 @@ animation: AnimationName 12s ease infinite;">
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
         <a href="dev.html">Development</a>
-        <a href="ux.html">UX</a>
         <a href="sco.html">Strategy & Concept</a>
+        <a href="ux.html">UX</a>
         <a href="#" style="color:rgb(214, 214, 214);">Project</a>
     </div>
 
