--- a/ux.html
+++ b/ux.html
@@ -48,7 +48,7 @@ animation: AnimationName 30s ease infinite;
             </button>
         </header>
 
-        <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
+        <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <div id="title">
             User Experience Design
