--- a/dev.html
+++ b/dev.html
@@ -48,13 +48,13 @@ animation: AnimationName 30s ease infinite;
             </button>
         </header>
 
-        <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
+        <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <div id="title">
             Development
         </div>
-
         <section class="content">
+            <!-- <h1 style="font-size: 4vw; padding:0; margin:0;">Development</h1> -->
             <article>
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 0</h1>
                 <h2 style="font-size: 40px;margin:0px;">Learning About Front-End Web Development Basics</h2>
@@ -71,7 +71,8 @@ animation: AnimationName 30s ease infinite;
                 <h2 style="font-size: 40px;margin:0px;">Source Control, A Life Saving Tool</h2>
                 <p>As i progress further in my development, things started to get much more complex. During this time i
                     needed something to manage, organize, and keep track of my syntax. By using GIT i am able to keep
-                    track of each revision and to also experiment implementing(or whether to discard) a POC(Proof of Concept).</p>
+                    track of each revision and to also experiment implementing(or whether to discard) a POC(Proof of
+                    Concept).</p>
             </article>
             <article>
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 2</h1>
@@ -92,8 +93,8 @@ animation: AnimationName 30s ease infinite;
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
         <a href="dev.html">Development</a>
-        <a href="ux.html">UX</a>
         <a href="sco.html">Strategy & Concept</a>
+        <a href="ux.html">UX</a>
         <a href="#" style="color:rgb(214, 214, 214);">Project</a>
     </div>
 
