--- a/sco.html
+++ b/sco.html
@@ -47,11 +47,12 @@ animation: AnimationName 30s ease infinite;
             </button>
         </header>
 
-        <iframe src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
+        <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <div id="title">
             Strategy & Concept
         </div>
+
         <section class="content">
             <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 0</h1>
             <!-- <h2 style="font-size: 40px;margin:0px;">Strategy</h2> -->
