--- a/ux.html
+++ b/ux.html
@@ -56,7 +56,7 @@ animation: AnimationName 30s ease infinite;
 
         <section class="content">
 
-            <section id="prologue" style="padding:0px;background:rgba(0,0,0,0.75);color: white; padding: 30px 30px 30px; margin-top: 20px;">
+            <!-- <section id="prologue" style="padding:0px;background:rgba(0,0,0,0.75);color: white; padding: 30px 30px 30px; margin-top: 20px;">
                 <h2 style="font-style: italic;font-size: 40px;margin:0px;">Essentials of User-Centered Design</h2>
                 <article>
                     <h2 style="font-size: 40px;margin:0px;">Empathize</h2>
@@ -87,28 +87,29 @@ animation: AnimationName 30s ease infinite;
                         to the previous phases and to iterate until eventually the result gets closer to the desired
                         outcome.</p>
                 </article>
-            </section>
+            </section> -->
             <article>
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 0</h1>
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Research</h1>
                 <h2 style="font-size: 40px;margin:0px;">Interview Preparation</h2>
                 <p></p>
                 <p>The purpose of the interview is to find out the needs of the client's target audience. This can be
-                    about the artist himself, the genre of the music that the artist is making, or even matters outside
-                    music such as what are the social media platforms the artist are planning to use and many others.
+                    about the artist themself, the genre of the music the target audience is interested in, or even matters outside
+                    music that contributes to the experience such as what are the platform are the audience uses to listen and many other. 
                 </p>
+                <h2 style="font-size: 40px;margin:0px;">Preparing the form</h2>
+                <p>As part of the exercise, a questionnaire is prepared in order to gather data from the target audience. This questionnaire covers basic questions to get the general idea of how to target audience is.</p>
+                <a href="content/Interview Research Form.nl.en.docx">Link to the questionnaire</a>
                 <h2 style="font-size: 40px;margin:0px;">Interview Result</h2>
-                <p>Conclusions of the interview reveals:
-                    Our client’s target group is mainly constituted out of women in the ages between 14–19 years old.
+                <p>Conclusions from the interview reveals:
+                    •Our client’s target group is predominantly constituted out of women.
                 </p>
+                <p>•Age ranges between 14–19 years old</p>
+                <p>•We can find this group being active in social media such as Instagram, Snapchat, etc.</p>
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Prototyping</h1>
                 <h2 style="font-size: 40px;margin:0px;">Storyboard</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt risus a consequat porta.
-                    Pellentesque a elementum lorem, sed eleifend augue. Curabitur tortor mi, fermentum id vehicula a,
-                    tincidunt at velit. Donec gravida porta ante, at lobortis libero eleifend ut. Donec vitae rutrum
-                    nunc, ut feugiat libero. Nullam quis sem et risus molestie ornare. Proin ornare lobortis luctus. Sed
-                    dui lacus, interdum eget maximus at, interdum a ex. Interdum et malesuada fames ac ante ipsum primis
-                    in faucibus. Curabitur risus quam, gravida id dui bibendum, iaculis iaculis urna.</p>
+                <p>A storyboard was originally used for the film industry. In designing user experience it is used as a tool to visualize an idea or a concept, to describe the context use of a product, and to show the emotional appeal of the product.</p>
+                <a href="content/storyboard.png">Simple sketch storyboard</a>
             </article>
             <!-- <article>
                 <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 1</h1>
