--- a/sco.html
+++ b/sco.html
@@ -70,61 +70,25 @@ animation: AnimationName 30s ease infinite;
 
             <!-- <h2 style="font-size: 40px;margin:0px;">Concept</h2> -->
             <article>
-                <h2 style="font-size: 40px;margin:0px;">Visual Semiotics</h2>
-                <p>Visual semiotics is a sub-domain of semiotics that analyses the way visual images communicate a
-                    message.</p><p>In this assigment i had to search for two different images and to visually associate in terms of shape, content, structure, and composition.</p>
-                <a href="content/visual_semiotics.pdf">Visual semiotics PDF</a>
+                <h2 style="font-size: 40px;margin:0px;">Visual Association</h2>
+                <p>Visual Association is a way to analyse on how visual images communicate a
+                    message and how images correlates to each other.</p><p>In this assigment i had to search for two different images and to visually associate them in terms of shape, content, structure, and composition.</p>
+                <a href="content/visual_semiotics.pdf">Visual semiotics PDF[Work In Progress]</a>
             </article>
 
             <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 1</h1>
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Brand Value</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a nisi non lectus rutrum
-                    facilisis a
-                    sit amet velit. Nullam placerat elit non ullamcorper pulvinar. Aliquam erat volutpat.
-                    Integer id
-                    elit blandit lectus dignissim molestie. Curabitur sit amet quam quam. Fusce imperdiet, arcu
-                    sed
-                    volutpat facilisis, arcu diam tincidunt justo, nec viverra nisi elit eget purus. Morbi
-                    pellentesque
-                    dui id purus eleifend tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et
-                    ultrices
-                    posuere cubilia Curae; Curabitur augue nisi, suscipit at magna quis, dapibus fringilla
-                    felis.
-                    Pellentesque auctor tellus congue ornare fermentum.</p>
+                <p>...</p>
             </article>
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Color</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a nisi non lectus rutrum
-                    facilisis a
-                    sit amet velit. Nullam placerat elit non ullamcorper pulvinar. Aliquam erat volutpat.
-                    Integer id
-                    elit blandit lectus dignissim molestie. Curabitur sit amet quam quam. Fusce imperdiet, arcu
-                    sed
-                    volutpat facilisis, arcu diam tincidunt justo, nec viverra nisi elit eget purus. Morbi
-                    pellentesque
-                    dui id purus eleifend tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et
-                    ultrices
-                    posuere cubilia Curae; Curabitur augue nisi, suscipit at magna quis, dapibus fringilla
-                    felis.
-                    Pellentesque auctor tellus congue ornare fermentum.</p>
+                <p>...</p>
             </article>
             <!-- <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 2</h1> -->
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Magazine Layout</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a nisi non lectus rutrum
-                    facilisis a
-                    sit amet velit. Nullam placerat elit non ullamcorper pulvinar. Aliquam erat volutpat.
-                    Integer id
-                    elit blandit lectus dignissim molestie. Curabitur sit amet quam quam. Fusce imperdiet, arcu
-                    sed
-                    volutpat facilisis, arcu diam tincidunt justo, nec viverra nisi elit eget purus. Morbi
-                    pellentesque
-                    dui id purus eleifend tincidunt. Vestibulum ante ipsum primis in faucibus orci luctus et
-                    ultrices
-                    posuere cubilia Curae; Curabitur augue nisi, suscipit at magna quis, dapibus fringilla
-                    felis.
-                    Pellentesque auctor tellus congue ornare fermentum.</p>
+                <p>...</p>
             </article>
         </section>
     </div>
