--- a/interactiveVisual.html
+++ b/interactiveVisual.html
@@ -24,7 +24,7 @@ animation: AnimationName 12s ease infinite;">
             </div>
         </header>
 
-        <iframe style="overflow: hidden;" src="visual1.html" frameborder="0" scrolling="no"></iframe>
+        <iframe class="visualiframe" style="overflow: hidden;" src="visual1.html" frameborder="0" scrolling="no"></iframe>
 
     <!-- SCRIPT SOURCES____________________________________________________________________________________________________________ -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script> -->
