--- a/sco.html
+++ b/sco.html
@@ -47,7 +47,7 @@ animation: AnimationName 30s ease infinite;
             </button>
         </header>
 
-        <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
+        <!-- <iframe class="visualiframe" src="visual3.html" frameborder="0" style="position: fixed;"></iframe> -->
 
         <div id="title">
             Strategy & Concept
